# repixel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  MANIFEST.in  PROJECT_SUMMARY.md  README.md  SECURITY.md  build.py  cfg_reader.py  demo.py  pyproject.toml  setup.bat  setup.sh  setup_dev.py  tasks.py
.github/workflows/: ci.yml
examples/: basic_usage.py
repixel/: __init__.py  algorithms.py  cli.py  compressor.py  utils.py
tests/: test_custom.py  test_repixel.py
